--- a/app/src/main/res/layout/activity_contest_add.xml
+++ b/app/src/main/res/layout/activity_contest_add.xml
@@ -100,11 +100,12 @@
                             android:layout_below="@+id/fieldEntry"
                             android:hint="심사기준"
                             android:id="@+id/criteria"
+                            android:minLines="3"
                             android:textSize="20sp"
                             android:background="@color/colorWhiteText"
                             android:layout_marginLeft="24dp"
                             android:layout_marginRight="24dp"
-                            android:inputType="text"/>
+                            android:inputType="textMultiLine"/>
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="112dp"
@@ -113,22 +114,22 @@
                             android:background="@color/colorWhiteText"
                             android:layout_marginLeft="24dp"
                             android:layout_marginRight="24dp"
-                            android:layout_weight="4"
+                            android:minLines="3"
                             android:hint="설명"
                             android:textSize="20sp"
-                            android:inputType="text"/>
+                            android:inputType="textMultiLine"/>
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="112dp"
                             android:layout_below="@+id/description"
                             android:id="@+id/award"
+                            android:minLines="3"
                             android:background="@color/colorWhiteText"
                             android:layout_marginLeft="24dp"
                             android:layout_marginRight="24dp"
                             android:textSize="20sp"
-                            android:layout_weight="4"
                             android:hint="수상내역"
-                            android:inputType="text"/>
+                            android:inputType="textMultiLine"/>
                     </RelativeLayout>
 
                 </ScrollView>
