학생 / 강사만 할 수  있는 일 권한 부여

--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -178,6 +178,7 @@
             android:layout_height="match_parent"
             android:background="@color/colorMainGreen"
             android:text="강좌 신청하기"
+            android:id="@+id/submit"
             android:letterSpacing="-0.05"
             android:textSize="16sp"
             android:textColor="@color/colorWhiteText"
