--- a/app/src/main/res/layout/activity_course_review_detail.xml
+++ b/app/src/main/res/layout/activity_course_review_detail.xml
@@ -8,6 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorWhiteText"
         android:id="@+id/relativeLayout"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
@@ -88,6 +89,12 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:background="@color/colorWhiteText"
+        android:text="aaaaaaaaaaa"
+        android:textColor="@color/textColor"
+        android:padding="24dp"
+        android:textSize="20sp"
         android:id="@+id/content"
         android:layout_below="@+id/relativeLayout"/>
 </RelativeLayout>
