--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item
-        android:id="@+id/action_search"
+        android:enabled="true"
         android:icon="@drawable/search"
-        android:title="Search"
-        app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="always"/>
+        android:title="홈"
+        app:showAsAction="ifRoom|withText"
+        android:id="@+id/action_button"/>
 </menu>
