--- a/app/src/main/res/layout/activity_teacher_profile.xml
+++ b/app/src/main/res/layout/activity_teacher_profile.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f0f0f0"
+    android:background="@color/greenBar"
     android:orientation="vertical">
 
     <!-- TODO: Update blank courseReviewFragment layout -->
@@ -11,6 +11,7 @@
         android:background="@color/greenBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="56dp"
         android:layout_weight="1">
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="96dp"
