강좌 리뷰 작성기능 버그 수정

--- a/app/src/main/res/layout/activity_course_review_write.xml
+++ b/app/src/main/res/layout/activity_course_review_write.xml
@@ -160,7 +160,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorMainGreen"
-            android:text="강좌 신청하기"
+            android:text="등록하기"
             android:id="@+id/submit"
             android:onClick="submit"
             android:letterSpacing="-0.05"
